--- a/themes/butterfly/source/css/_layout/aside.styl
+++ b/themes/butterfly/source/css/_layout/aside.styl
@@ -1,5 +1,8 @@
 #aside-content
-  width: 35%
+  width: 30%
+  border-left: 2px solid black
+  margin-left: 5%
+  box-shadow: -10px 0px 0px 1px #c9c9c9;
 
   +minWidth900()
     if hexo-config('aside.position') == 'right'
