--- a/themes/butterfly/source/css/_layout/aside.styl
+++ b/themes/butterfly/source/css/_layout/aside.styl
@@ -12,6 +12,9 @@
 
   +maxWidth900()
     width: 100%
+    box-shadow: none
+    border-left: none
+    margin-left: 0
 
   > .card-widget:first-child
     margin-top: 0
