--- a/css/index.css
+++ b/css/index.css
@@ -2476,6 +2476,10 @@ h1.page-title + .tag-cloud-list {
 @media screen and (max-width: 900px) {
   #aside-content {
     width: 100%;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border-left: none;
+    margin-left: 0;
   }
 }
 #aside-content > .card-widget:first-child {
