--- a/themes/butterfly/source/css/_layout/aside.styl
+++ b/themes/butterfly/source/css/_layout/aside.styl
@@ -2,7 +2,7 @@
   width: 25%
   border-left: 2px solid black
   margin-left: 5%
-  
+  box-shadow:none
 
   +minWidth900()
     if hexo-config('aside.position') == 'right'
