--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1692,8 +1692,8 @@ figure.highlight pre .javascript .function {
 }
 #article-container pre,
 #article-container code {
-  font-size: var(--global-font-size);
-  font-family: consolas, Menlo, 'PingFang SC', 'Microsoft YaHei', sans-serif !important;
+  font-size: 12px;
+  font-family: courier !important;
 }
 #article-container code {
   padding: 2px 4px;
@@ -1720,7 +1720,7 @@ figure.highlight pre .javascript .function {
 #article-container figure.highlight figcaption,
 #article-container figure.highlight .caption {
   padding: 6px 0 2px 14px;
-  font-size: var(--global-font-size);
+  font-size: 12px;
   line-height: 1em;
 }
 #article-container figure.highlight figcaption a,
@@ -1752,7 +1752,7 @@ figure.highlight pre .javascript .function {
   height: 2.15em;
   background: var(--hltools-bg);
   color: var(--hltools-color);
-  font-size: var(--global-font-size);
+  font-size: 12px;
 }
 #article-container .highlight-tools.closed ~ * {
   display: none;
@@ -2462,11 +2462,11 @@ h1.page-title + .tag-cloud-list {
   text-align: left;
 }
 #aside-content {
-  width: 30%;
+  width: 25%;
   border-left: 2px solid #000;
   margin-left: 5%;
-  -webkit-box-shadow: -10px 0px 0px 1px #c9c9c9;
-  box-shadow: -10px 0px 0px 1px #c9c9c9;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 @media screen and (min-width: 900px) {
   #aside-content {
@@ -2476,8 +2476,6 @@ h1.page-title + .tag-cloud-list {
 @media screen and (max-width: 900px) {
   #aside-content {
     width: 100%;
-    -webkit-box-shadow: none;
-    box-shadow: none;
     border-left: none;
     margin-left: 0;
   }
